v2.2.2/_sources/plugins/interfaces_id_trend_analytics_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.interfaces_id_trend_analytics module -- Resource module for Interfaces Id Trend Analytics
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.2.2).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.interfaces_id_trend_analytics`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.17.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation create of the resource Interfaces Id Trend Analytics. - \> The Trend analytcis data for the interface, identified by its instanceUuid, in the specified time range. The data is grouped based on the trend time Interval, other input parameters like attributes and aggregate attributes. The default time interval range is 3 hours when start and endTime is not provided.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.3.0.0
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-aggregateAttributes"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-aggregateattributes:

      .. rst-class:: ansible-option-title

      **aggregateAttributes**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-aggregateAttributes" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Interfaces Id Trend Analytics's aggregateAttributes.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-aggregateAttributes/function"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-aggregateattributes/function:

      .. rst-class:: ansible-option-title

      **function**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-aggregateAttributes/function" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Function.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-aggregateAttributes/name"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-aggregateattributes/name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-aggregateAttributes/name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Name.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-attributes"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-attributes:

      .. rst-class:: ansible-option-title

      **attributes**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-attributes" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Attributes.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-catalystcenter_api_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-catalystcenter_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-catalystcenter_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-catalystcenter_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-catalystcenter_username:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-catalystcenter_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-catalystcenter_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-endTime"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-endtime:

      .. rst-class:: ansible-option-title

      **endTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-endTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      End Time.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filters"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-filters:

      .. rst-class:: ansible-option-title

      **filters**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filters" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Interfaces Id Trend Analytics's filters.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filters/key"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-filters/key:

      .. rst-class:: ansible-option-title

      **key**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filters/key" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Key.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filters/operator"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-filters/operator:

      .. rst-class:: ansible-option-title

      **operator**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filters/operator" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Operator.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-filters/value"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-filters/value:

      .. rst-class:: ansible-option-title

      **value**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-filters/value" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Value.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter. The interface instance Uuid.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-startTime"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-starttime:

      .. rst-class:: ansible-option-title

      **startTime**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-startTime" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Start Time.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-timestampOrder"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-timestamporder:

      .. rst-class:: ansible-option-title

      **timestampOrder**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-timestampOrder" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Timestamp Order.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-trendIntervalInMinutes"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-trendintervalinminutes:

      .. rst-class:: ansible-option-title

      **trendIntervalInMinutes**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-trendIntervalInMinutes" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Trend Interval In Minutes.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are devices.Devices.the\_trend\_analytcis\_data\_for\_the\_interfaces\_in\_the\_specified\_time\_range,
   - Paths used are post /dna/data/api/v1/interfaces/{id}/trendAnalytics,
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK

.. Seealso

See Also
--------

.. seealso::

   `Cisco DNA Center documentation for Devices TheTrendAnalytcisDataForTheInterfacesInTheSpecifiedTimeRange <https://developer.cisco.com/docs/dna-center/#!the-trend-analytcis-data-for-the-interfaces-in-the-specified-time-range>`_
       Complete reference of the TheTrendAnalytcisDataForTheInterfacesInTheSpecifiedTimeRange API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Create
      cisco.catalystcenter.interfaces_id_trend_analytics:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_api_port: "{{catalystcenter_api_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        aggregateAttributes:
          - function: string
            name: string
        attributes:
          - string
        endTime: 0
        filters:
          - key: string
            operator: string
            value: string
        id: string
        startTime: 0
        timestampOrder: string
        trendIntervalInMinutes: 0




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.catalystcenter.interfaces_id_trend_analytics_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco CATALYST Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": [{"aggregateAttributes": [{"name": "string"}], "attributes": [{"name": "string", "value": "string"}], "timestamp": 0}], "timestampOrder": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

